--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Entrenador Personal - Mi Marca Personal</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page - Entrenador Personal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<h1>Entrenador Personal - Mi Marca Personal</h1>
-		<nav>
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Testimonios</a></li>
-				<li><a href="#">Contacto</a></li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<section>
-			<h2>Servicios</h2>
-			<p>Ofrezco una amplia gama de servicios de entrenamiento personalizados para ayudarte a alcanzar tus objetivos de acondicionamiento físico. Mis servicios incluyen:</p>
-			<ul>
-				<li>Entrenamiento personalizado</li>
-				<li>Asesoramiento nutricional</li>
-				<li>Planificación de entrenamiento y seguimiento</li>
-				<li>Motivación y apoyo</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Testimonios</h2>
-			<blockquote>
-				<p>"Con la ayuda de Mi Marca Personal, he logrado perder 10 kilos en los últimos 3 meses. Nunca me había sentido tan en forma y saludable en mi vida. ¡Gracias!"</p>
-				<cite>John Doe</cite>
-			</blockquote>
-			<blockquote>
-				<p>"Mi Marca Personal me ha ayudado a aumentar mi masa muscular y mejorar mi rendimiento deportivo. Su conocimiento y motivación han sido clave para mi éxito."</p>
-				<cite>Jane Smith</cite>
-			</blockquote>
-		</section>
-	</main>
-	<footer>
-		<p>Derechos de autor © 2023 Mi Marca Personal - Entrenador Personal</p>
-	</footer>
+    <header>
+        <div class="logo">
+            <img src="images/Logo_2.png" alt="Logo de la marca">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#planes">Planes</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="inicio">
+        <h1>Bienvenido a mi sitio</h1>
+        <p>Texto introductorio o descripción breve de tus servicios.</p>
+        <a href="#contacto" class="cta-button">Contactar</a>
+    </section>
+
+    <section id="servicios">
+        <h2>Servicios</h2>
+        <p>Descripción de tus servicios como entrenador personal.</p>
+    </section>
+
+    <section id="planes">
+        <h2>Planes</h2>
+        <p>Descripción de los planes que ofreces a tus clientes.</p>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Información de contacto y formulario de contacto.</p>
+    </section>
+
+    <footer>
+        <p>Derechos Reservados © 2023 | Entrenador Personal</p>
+    </footer>
 </body>
 </html>
-
